--- a/requirements.txt
+++ b/requirements.txt
@@ -410,7 +410,7 @@ PyRect==0.2.0
 pyresparser==1.0.6
 pyrsistent==0.19.3
 PyScreeze==0.1.28
-pytesseract @ file:///Users/virajmurab/Documents/RandomCode/pytesseract
+pytesseract
 python-dateutil==2.8.2
 python-decouple==3.8
 python-docx==1.1.0
