--- a/requirements.txt
+++ b/requirements.txt
@@ -82,7 +82,7 @@ firebase-admin==6.1.0
 Flask==3.0.3
 Flask-Cors==4.0.1
 Flask-SQLAlchemy==3.1.1
-flatbuffers==23.5.26
+flatbuffers>=24.3.25,<25.0.0
 fonttools==4.38.0
 fpdf==1.7.2
 fqdn==1.5.1
@@ -113,7 +113,7 @@ gunicorn==23.0.0
 gym==0.26.2
 gym-notices==0.0.8
 h11==0.14.0
-h5py==3.8.0
+h5py>=3.10.0,<4.0.0
 html5lib==1.1
 httpcore==1.0.6
 httplib2==0.21.0
@@ -150,14 +150,12 @@ jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
-keras==2.12.0
 keyboard==0.13.5
 kiwisolver==1.4.4
 kubernetes==28.1.0
 langchain==0.1.0
 langchain-community==0.0.9
 langchain-core==0.1.7
-langchain-openai==0.0.2
 langcodes==3.3.0
 langsmith==0.0.77
 libclang==16.0.0
@@ -169,7 +167,6 @@ marshmallow==3.20.1
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
 mistune==2.0.5
-ml-dtypes==0.2.0
 mmh3==4.0.1
 monotonic==1.6
 MouseInfo==0.1.3
@@ -206,12 +203,11 @@ opentelemetry-util-http==0.43b0
 opt-einsum==3.3.0
 ordered-set==4.1.0
 overrides==7.4.0
-packaging==24.1
+packaging==23.2
 pandas==2.1.4
 pandocfilters==1.5.0
 parso==0.8.3
 pdfkit==1.0.0
-pdflatex==0.1.3
 pdfminer.six==20231228
 pdfreader==0.1.12
 pexpect==4.8.0
@@ -457,18 +453,9 @@ stack-data==0.6.2
 starlette==0.32.0.post1
 sympy==1.12
 tenacity==8.2.3
-tensorboard==2.14.1
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.14.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.34.0
-tensorflow-macos==2.14.0
 termcolor==2.2.0
 terminado==0.17.1
 textblob==0.17.1
-tf-nightly==2.13.0.dev20230422
-tf-nightly-macos==2.13.0.dev20230422
 thinc==8.2.2
 threadpoolctl==3.1.0
 tiktoken==0.5.2
@@ -485,7 +472,7 @@ typing_extensions==4.12.2
 tzdata==2024.2
 uri-template==1.2.0
 uritemplate==4.1.1
-urllib3==2.2.3
+urllib3>=1.24.2,<2.0
 uvicorn==0.25.0
 uvloop==0.19.0
 virtualenv==20.24.5
