--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Cython>=0.29.34  # Updated to the latest version
 Django==4.2.16
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
@@ -9,7 +10,7 @@ uvicorn==0.25.0
 requests==2.32.3
 numpy==1.26.3
 pandas==2.1.4
-scikit-learn==1.2.2
+scikit-learn==1.3.0  # Updated to the latest version
 tensorflow==2.14.0
 torch==2.0.0  # Add if using PyTorch
 spacy==3.7.2
