--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ requests==2.32.3
 numpy==1.26.3
 pandas==2.1.4
 scikit-learn==1.3.0  # Updated to the latest version
-tensorflow==2.14.0
+tensorflow==2.18.0  # Updated to a compatible version
 torch==2.0.0  # Add if using PyTorch
 spacy==3.7.2
 beautifulsoup4==4.11.1
