--- a/vercel.json
+++ b/vercel.json
@@ -5,14 +5,12 @@
         "src": "backend/books.py",  
         "use": "@vercel/python"
       }
-    ], 
-    "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "backend/books.py"  
-      }
     ],
     "rewrites": [
+      {
+        "source": "/api/(.*)",
+        "destination": "backend/books.py"
+      },
       {
         "source": "/(.*)",
         "destination": "/"
