--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,14 @@
         "use": "@vercel/python"
       }
     ],
-    "rewrites": [
+    "routes": [
       {
-        "source": "/api/(.*)",
-        "destination": "backend/books.py"
+        "src": "/api/(.*)",
+        "dest": "backend/books.py"
       },
       {
-        "source": "/(.*)",
-        "destination": "/"
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
   }
