--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,11 @@
         "use": "@vercel/python"
       }
     ],
-    "routes": [
+    "rewrites": [
+
       {
-        "src": "/api/(.*)",
-        "dest": "backend/books.py"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/"
+        "source": "/(.*)",
+        "destination": "/"
       }
     ]
   }
