--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,10 @@
       }
     ],
     "rewrites": [
-
+      {
+        "source": "/api/(.*)",
+        "destination": "backend/books.py"
+      },
       {
         "source": "/(.*)",
         "destination": "/"
