--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,16 @@
 {
-    "version": 2
+    "version": 2,
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/next@latest"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
+    ]
   }
   
