--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
-    "@vercel/next": "^4.4.0",
+    "@vercel/next": "latest",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
