--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@vercel/next": "latest",
-    "next": "15.1.3",
+    "next": "15.1.3", 
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
