--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@vercel/next": "latest",
-    "next": "15.1.3", 
+    "lucide-react": "^0.469.0",
+    "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
